# video-index

./: Dockerfile  README.md  compose.yaml  package.json  pyproject.toml  requirements.in  requirements.txt  run.py
.github/: dependabot.yaml
.github/workflows/: build-container-image.yaml  ruff.yaml
ci/: gen-compose.py  gen-github-workflows.py  gen.py
video_index/: app.py  models.py  tasks.py  templates.py  versions.py
